--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,6 +39,13 @@
 	 margin-top:10px;
  }
  
+ .ul-comment {
+	 display: flex;
+	 justify-content: space-between;
+	 list-style: none;
+	 margin: 20px auto;
+	 padding: 0;
+ }
  
  @media screen and (min-width: 480px) {
 	 header {
