--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,56 +24,45 @@
 		<h2>Book detail</h2>
 
 		<table class="table">
-				<tr>
-					<td>
-						<%= link_to (@book.user) do %>
-							<%= attachment_image_tag @book.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg" %><br>
-							<%= @book.user.name %>
-						<% end %>
-					</td>
-					<td><%= link_to @book.title, @book %></td>
-					<td><%= @book.body %></td>
-					
-					<% if @book.user.id == current_user.id %>
-						<td id="favorite-<%= @book.id %>">
-							<%= render 'favorite', book: @book %>
-						</td>
-
-						<td>コメント数：<%= @book.book_comments.count %></td>
-						<td><%= link_to "Edit",edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
-						<td><%= link_to "Destroy", @book, method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
-					<% else %>
-						<td id="favorite-<%= @book.id %>">
-							<%= render 'favorite', book: @book %>
-						</td>
-						<td>コメント数：<%= @book.book_comments.count %></td>
+			<tr>
+				<td>
+					<%= link_to (@book.user) do %>
+						<%= attachment_image_tag @book.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg" %><br>
+						<%= @book.user.name %>
 					<% end %>
-				</tr>
-			</table>
+				</td>
+				<td><%= link_to @book.title, @book %></td>
+				<td><%= @book.body %></td>
+				
+				<% if @book.user.id == current_user.id %>
+					<td id="favorite-<%= @book.id %>">
+						<%= render 'favorite', book: @book %>
+					</td>
 
-		<% if @book.book_comments.any? %>
-			<table class="table">
-				<% @book.book_comments.each do |comment| %>
-					<tr>
-						<td><%= comment.body %></td>
-						<% if comment.user_id == current_user.id %>
-						<%# user_idの時はcurrent_userだけでなく、current_user.idとする %>
-							<td class="text-right"><%= link_to 'Destroy', book_book_comment_path(@book, comment), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger" %></td>
-						<% else %>
-							<td></td>
-						<% end %>
-					</tr>
+					<td id="count">
+						<%= render partial: 'book_comments/count', locals: { comments: @comments, book: @book } %>
+					</td>
+					<td><%= link_to "Edit",edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %></td>
+					<td><%= link_to "Destroy", @book, method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %></td>
+				<% else %>
+					<td id="favorite-<%= @book.id %>">
+						<%= render 'favorite', book: @book %>
+					</td>
+					<td id="count">
+						<%= render partial: 'book_comments/count', locals: { comments: @comments } %>
+					</td>
 				<% end %>
-			</table>
-		<% end %>
-		<%= form_for ([@book, @book.book_comments.build]) do |f| %>
-			<div class="field row">
-				<%= f.text_area :body, class: "col-xs-12" %>
-			</div>
-			<%= f.submit %>
-		<% end %>
+			</tr>
+		</table>
+		<hr>
 
+		<div id="comments_area">
+			<%= render partial: 'book_comments/index', locals: { comments: @comments } %>
+		</div>
 
+		<% if user_signed_in? %>
+			<%= render partial: 'book_comments/form', locals: { comment: @comment, book: @book } %>
+		<% end %>
 	</div>
 </div>
 
