--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -26,9 +26,11 @@
 		</tr>
 </table>
 
-<div class="row">
-	<%= link_to '',edit_user_path(user), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench edit_user_#{user.id}" %>
-</div>
+<% if user == current_user %>
+	<div class="row">
+		<%= link_to '',edit_user_path(user), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench edit_user_#{user.id}" %>
+	</div>
+<% end %>
 <div class="row">
 	<%= render 'users/follow_form' %>
 </div>
